# Amshu

./: README.md  settings.gradle
app/: build.gradle
app/sampledata/: Android.mk
app/src/androidTest/java/com/yair/amshu/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yair/amshu/: CameraFrameone.java  CameraFramethree.java  CameraFrametwo.java  ColorDetector.java  Coloralgo.java  DetectionBasedTracker.java  FdActivity.java  HitArea.java  KMeans.java  Kmeans.java  LevelsManager.java  LoadPage3.java  LoadPageBall1.java  Loadpage2.java  MainActivity.java  ScoreManager.java  load_page_2.java  load_page_3.java  load_page_ball_1.java  m2.java  m3.java  scoremanager.java
app/src/main/res/drawable/: roundbutton.xml  rounded2.xml  rounded3.xml  rounded4.xml
app/src/main/res/layout/: activity_camera_frameone.xml  activity_levels_manager.xml  activity_load_page.xml  activity_main.xml  firstscreen.xml  loadpage.xml  vid1_page.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yair/amshu/: ExampleUnitTest.java  KMeansTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary342/: build.gradle
openCVLibrary342/src/main/c/c/: CMakeLists.txt
openCVLibrary342/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
openCVLibrary342/src/main/java/org/opencv/core/: Rect.java
